force-app/main/default/objects/JMS_Equipment_Request__c/JMS_Equipment_Request__c.object-meta.xml
<CustomObject>
    <label>Equipment Request</label>
    <nameField>
        <displayFormat>ER-{0000000000}</displayFormat>
        <label>JMS Equipment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>