force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Account__c.field-meta.xml
<CustomField>
    <fullName>JMS_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>JMS Equipment Requests</relationshipLabel>
    <relationshipName>JMS_Equipment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>