force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>JMS_Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Street</fullName>
            </value>
            <value>
                <fullName>National Other</fullName>
            </value>
            <value>
                <fullName>Aramark</fullName>
            </value>
            <value>
                <fullName>Avendra</fullName>
            </value>
            <value>
                <fullName>Foodbuy/Compass</fullName>
            </value>
            <value>
                <fullName>HPSI</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Sodexo</fullName>
            </value>
            <value>
                <fullName>Vizient</fullName>
            </value>
            <value>
                <fullName>Buyers Edge</fullName>
            </value>
            <value>
                <fullName>Aramark / CPS Canada</fullName>
            </value>
            <value>
                <fullName>Compass / Foodbuy</fullName>
            </value>
            <value>
                <fullName>HealthPro Canada</fullName>
            </value>
            <value>
                <fullName>Great Canadian Gaming</fullName>
            </value>
            <value>
                <fullName>Avendra Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>