force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>