force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Customer_State__c.field-meta.xml
<CustomField>
    <fullName>JMS_Customer_State__c</fullName>
    <formula>JMS_Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer State</label>
    <type>Text</type>
</CustomField>