force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>JMS_Equipment_Cost__c</fullName>
    <label>Equipment Cost ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>