force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Equipment_Integrity_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>JMS_Equipment_Integrity_Approval_Status__c</fullName>
    <description>The status of the Approval</description>
    <label>Equipment Integrity Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>