force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Equipment_Integrity_Approved__c.field-meta.xml
<CustomField>
    <fullName>JMS_Equipment_Integrity_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Integrity Approved</label>
    <type>Checkbox</type>
</CustomField>