force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Is_Approval_For_EI__c.field-meta.xml
<CustomField>
    <fullName>JMS_Is_Approval_For_EI__c</fullName>
    <description>The formula field to check whether EI should be approved or not</description>
    <formula>IF(NOT(OR( JMS_Equipment_Cost__c &gt; 10000, JMS_Ancillary_Cost__c &gt; 1000)) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Approval For EI</label>
    <type>Checkbox</type>
</CustomField>