force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Is_Approval_For_Non_NAM__c.field-meta.xml
<CustomField>
    <fullName>JMS_Is_Approval_For_Non_NAM__c</fullName>
    <formula>AND( OR(ISPICKVAL(JMS_Account_Type__c, &apos;National Other&apos;),ISPICKVAL(JMS_Account_Type__c,
&apos;Street&apos;)), JMS_Is_Approval_For_EI__c == false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Approval For Non NAM</label>
    <type>Checkbox</type>
</CustomField>