force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Is_Attachment_Added__c.field-meta.xml
<CustomField>
    <fullName>JMS_Is_Attachment_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether attachment is added or not.</description>
    <label>Is Attachment Added</label>
    <type>Checkbox</type>
</CustomField>