force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Machine_Count__c.field-meta.xml
<CustomField>
    <fullName>JMS_Machine_Count__c</fullName>
    <label>Machine Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>