force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Manager_Details__c.field-meta.xml
<CustomField>
    <fullName>JMS_Manager_Details__c</fullName>
    <formula>IF(  NOT(ISBLANK(Owner:User.ManagerId)) ,  Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName + &apos;@@&apos; +  Owner:User.Manager.Email + &apos;@@&apos; + Owner:User.ManagerId, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Details</label>
    <type>Text</type>
</CustomField>