force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Operator_Trade_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Trade_ID__c</fullName>
    <label>Operator Trade ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>