force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Equipment Requests</relationshipLabel>
    <relationshipName>JMS_Equipment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>