force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>JMS_Overall_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>InProgress - Rejected</fullName>
            </value>
            <value>
                <fullName>InProgress - Pending Approvals</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>