force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Parent_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Parent_Contract_Name__c</fullName>
    <label>Parent/Contract Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>