force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Placement_Reason__c.field-meta.xml
<CustomField>
    <fullName>JMS_Placement_Reason__c</fullName>
    <label>Placement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Add/Penetrate Existing Customer</fullName>
            </value>
            <value>
                <fullName>Ancillary Order</fullName>
            </value>
            <value>
                <fullName>Food Show / Special Event</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Account Update</fullName>
            </value>
            <value>
                <fullName>Equipment Modification</fullName>
            </value>
            <value>
                <fullName>Conversion - Brand</fullName>
            </value>
            <value>
                <fullName>Replacement - Same Model - Existing Customer</fullName>
            </value>
            <value>
                <fullName>Replacement - Model Change - Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>