force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_RSM_Approved__c.field-meta.xml
<CustomField>
    <fullName>JMS_RSM_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSM Approved</label>
    <type>Checkbox</type>
</CustomField>