force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Status__c.field-meta.xml
<CustomField>
    <fullName>JMS_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>JMS_Overall_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active - Pending RSM</fullName>
            </value>
            <value>
                <fullName>Rejected By RSM</fullName>
            </value>
            <value>
                <fullName>Rejected By NAM</fullName>
            </value>
            <value>
                <fullName>Active - Pending Equipment Integrity</fullName>
            </value>
            <value>
                <fullName>Rejected By Equipment Integrity</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Active - Pending NAM</fullName>
            </value>
            <value>
                <fullName>Active - Pending NAM &amp; Trade</fullName>
                <isActive>false</isActive>
                <label>Active - Pending NAM &amp; Trade</label>
            </value>
            <value>
                <fullName>Active - Pending Trade</fullName>
                <isActive>false</isActive>
                <label>Active - Pending Trade</label>
            </value>
            <value>
                <fullName>Active_Pending_RSM</fullName>
                <isActive>false</isActive>
                <label>Active_Pending_RSM</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Rejected By NAM &amp; Trade</fullName>
                <isActive>false</isActive>
                <label>Rejected By NAM &amp; Trade</label>
            </value>
            <value>
                <fullName>Rejected By Trade</fullName>
                <isActive>false</isActive>
                <label>Rejected By Trade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>