force-app/main/default/objects/JMS_Equipment_Request__c/fields/JMS_Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>JMS_Work_Order_Number__c</fullName>
    <label>Work Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>