force-app/main/default/objects/JMS_Equipment_Request__c/fields/NAM_approval_Status__c.field-meta.xml
<CustomField>
    <fullName>NAM_approval_Status__c</fullName>
    <label>NAM Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>