force-app/main/default/objects/JMS_Equipment_Request__c/fields/NAM_Approved__c.field-meta.xml
<CustomField>
    <fullName>NAM_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAM Approved</label>
    <type>Checkbox</type>
</CustomField>