force-app/main/default/objects/JMS_Equipment_Request__c/recordTypes/JMS_ERF.recordType-meta.xml
<RecordType>
    <fullName>JMS_ERF</fullName>
    <active>true</active>
    <description>ERF Record Type</description>
    <label>ERF</label>
</RecordType>