force-app/main/default/objects/JMS_Equipment_Request__c/recordTypes/JMS_ERF_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>JMS_ERF_Read_Only</fullName>
    <active>true</active>
    <description>ERF Read Only Record Type</description>
    <label>ERF Read-Only</label>
</RecordType>