force-app/main/default/objects/JMS_Equipment_Request__c/validationRules/JMS_Not_Allowed_Negative_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>JMS_Not_Allowed_Negative_Values</fullName>
    <active>true</active>
    <errorConditionFormula>OR( JMS_Ancillary_Cost__c &lt; 0 , JMS_Equipment_Cost__c &lt; 0, JMS_Machine_Count__c  &lt; 0)</errorConditionFormula>
    <errorMessage>Ancillary Cost , Equipment Cost , Machine Count should not be less than Zero</errorMessage>
</ValidationRule>