force-app/main/default/objects/JMS_Equipment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_Account__c</columns>
    <columns>JMS_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>JMS_RSM_Approved__c</columns>
    <columns>NAM_Approved__c</columns>
    <columns>JMS_Equipment_Integrity_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
    </filters>
    <label>All</label>
</ListView>