force-app/main/default/objects/JMS_Equipment_Request__c/listViews/JMS_Equipment_Request_NAM_Approvers_JMS_Equipment_Request.listView-meta.xml
<ListView>
    <fullName>JMS_Equipment_Request_NAM_Approvers_JMS_Equipment_Request</fullName>
    <columns>NAME</columns>
    <columns>JMS_Account__c</columns>
    <columns>JMS_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>JMS_RSM_Approved__c</columns>
    <columns>NAM_Approved__c</columns>
    <columns>JMS_Equipment_Integrity_Approved__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>NAM_Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Equipment Request NAM Approvers</label>
    <queue>JMS_Equipment_Request_NAM_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>